Preserve structured concurrency close boundaries
Claude's six-dimensional hardening pass improved several safety checks, but two changes weakened Phase 1 contracts. This restores TaskScope.subtasks() as an immutable snapshot and makes owned-executor termination share the same closeTimeout deadline as subtask termination instead of adding a separate fixed five-second wait.

Constraint: Phase 1 design states closeTimeout is the hard bound for close() waiting on cancelled tasks.
Rejected: Keep executor awaitTermination(5s) | it can make close() exceed closeTimeout when work ignores interruption.
Rejected: Return Collections.unmodifiableList(subtasks) publicly | it exposes a live internal view rather than the API snapshot callers expect.
Confidence: high
Scope-risk: narrow
Directive: Any future executor shutdown hardening must consume the existing close deadline, not add a second wait window.
Tested: mvn -Dtest=com.smart.rag.common.concurrent.DefaultTaskScopeTest test; git diff --check; gitnexus detect_changes staged
Not-tested: Full mvn test remains blocked by unrelated existing failures reported earlier in ModelParamsServiceImplTest, VectorStoreMapperTest, and MmrDocumentPostProcessorTest.